# ADS7128_PICO_RP2040_DRIVER

./: .gitignore  CMakeLists.txt  README.md  main.c
lib/: ADS7128.c  ADS7128.h  CMakeLists.txt
